# app/controllers/api/v1/check_in_events_controller.rb
@@ -1,4 +1,4 @@
-class Api::V1::CheckInConferencesController < ApplicationController
+class Api::V1::CheckInEventsController < ApplicationController
   include SecuredPublicApi
   before_action :set_profile
 
@@ -7,9 +7,9 @@ class Api::V1::CheckInConferencesController < ApplicationController
   rescue_from Pundit::NotAuthorizedError, with: :not_authorized
 
   def create
-    @params = check_in_conference_params(JSON.parse(request.body.read, { symbolize_names: true }))
+    @params = check_in_events_params(JSON.parse(request.body.read, { symbolize_names: true }))
     profile = Profile.find(@params[:profileId])
-    check_in_timestamp = Time.zone.at(@params[:check_in_timestamp])
+    check_in_timestamp = Time.zone.at(@params[:checkInTimestamp])
     @check_in = CheckInConference.new(profile:, conference:, check_in_timestamp:)
 
     if @check_in.save
@@ -19,8 +19,8 @@ class Api::V1::CheckInConferencesController < ApplicationController
     end
   end
 
-  def check_in_conference_params(_params)
-    json_params = ActionController::Parameters.new(JSON.parse(request.body.read))
-    json_params.permit(:profileId, :eventAbbr, :check_in_timestamp)
+  def check_in_events_params(params)
+    json_params = ActionController::Parameters.new(params)
+    json_params.permit(:profileId, :eventAbbr, :checkInTimestamp)
   end
 end
